# mxnet110-cpu-gpu-win-demo

./: .gitignore  make.bat  readme.md
cmake/: CMakeLists.txt  example-cpu.cmake  example-gpu.cmake  util.cmake
data/mnist_data/: readme.md
model/resnet18/: readme.md
mxnet/: readme.md
src/example/: image-classification-predict.cc  lenet_with_mxdataiter_cpu.cpp  mlp_cpu.cpp  mlp_gpu.cpp
